prevent empty reservations to be created in case of high resources contention (#1390)